@@ -5,8 +5,9 @@ perl                  = 5.010001
 local::lib            = 2.000014
 namespace::autoclean  = 0.22
 Class::Null           = 2.101420
-Class::Usul           = v0.53.0
+Class::Usul           = v0.56.0
 Config::Tiny          = 2.20
+CPAN::Meta            = 2.142690
 CPAN::Uploader        = 0.103004
 Date::Format          = 2.24
 Dist::Zilla           = 4.300033
@@ -18,7 +19,7 @@ Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
 Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.141760
 Dist::Zilla::Plugin::Signature             = 1.100930
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
-File::DataClass       = v0.54.0
+File::DataClass       = v0.55.0
 File::ShareDir        = 1.102
 HTTP::Message         = 6.06
 LWP::Protocol::https  = 6.03
