@@ -1,5 +1,6 @@
 Revision history for Module::Provision
 
+          - Replaced C::U::TraitFor::MetaData with CPAN::Meta
           - Fixed appbase logic, again
           - Added module_metadate attribute
           - Can load multiple plugins. Comma separated list
